style.css
.dark-bg {
    background-color: rgb(20, 23, 48);
    font-family: "Roboto", sans-serif
}

.title-64 {
    font-size: 64px;
}

.title-48 {
    font-size: 48px;
}

.centre {
    text-align: center;
}

.left {
    text-align: left;
}

.bold {
    font-weight: bold;

}

.border-w2 {
    border: solid 1px black
}

.accent-border {
    border-color: rgb(103, 212, 189)
}

.border-r8 {
    border-radius: 8px;
}

.border-none {
    border: none;
}



.header-bar {
    display: inline;
    text-align: center;
    position: sticky;
    top: 0px;
    background-color: red;
}

.header-left {
    float: left
}

.header-right {
    float: right
}

.text-container {
    display: block;
    padding: 5%
}

.header-icon {
    display: inline;
    padding: 10px;
    margin-left: 0.5vw;
    text-align: center;
    transition: 0.25s;
    user-select: none;
    background-color: rgba(0, 0, 0, 0);
    color: white;
    outline: none;
    justify-self: center;
    justify-content: center;
    text-decoration: none;
}

.selected {
    background-color: rgba(255, 255, 255, 0.753);
    color: rgb(20, 23, 48);
}

.header-icon:hover {
    background-color: rgba(255, 255, 255, 0.753);
    color: rgb(20, 23, 48);
    cursor: pointer;

}

.margin-top-50 {
    margin-top: 50px;
}

.font-console {
    font-family: "Lucida Console";
}



.std-colour {
    color: rgb(243, 243, 243)
}

.greyed-out-colour {
    color: rgba(243, 243, 243, 0.527)
}

.accent-colour {
    color: rgb(103, 212, 189)
}

.border-radius-8 {
    border-radius: 8px;
}

.border-black-2 {
    border: black 2px solid
}

.grid-item {}

.grid-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: 100%;

}

.grid {
    display: flex;
    column-gap: 50px;
    row-gap: 50px;
    align-content: center;
    justify-content: center;
    align-items: center;
}

.project-tile {
    display: inline-grid;
    transition: 0.25s;
    width: 20vw;
    height: 20vw;
    border: 1px black solid
}

.project-title {
    font-size: 24px;
    align-content: center;
    justify-content: center;
    align-items: center;
    text-align: center;
    transition: 0.2s;
}

.project-title:hover {
    font-size: 28px;
    background-color: rgb(138, 138, 138);
    color: white;
    ;
}

.typewriter {
    overflow: hidden;
    /* Ensures the content is not revealed until the animation */
    white-space: nowrap;
    /* Keeps the content on a single line */
    letter-spacing: .15em;
    /* Adjust as needed */
    animation:
        typing 1s steps(100, end),
        blink-caret .75s step-end forwards;
}

.projects-container {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    gap: 1rem;
}

/* The typing effect */
@keyframes typing {
    from {
        width: 0%
    }

    to {
        width: 12%
    }
}

/* The typewriter cursor effect */
@keyframes blink-caret {

    from,
    to {
        border-color: transparent
    }

    50% {
        border-color: rgb(103, 212, 189);
    }
}

.horizontal{
    margin: 3rem;
}

.project .experience {
    margin: 2rem 2rem 2rem 2rem;
    border-radius: 2rem;
    transition: 0.2s;
}

.project{
    border-radius: 1rem;
    transition: 0.1s;
}

.section-title {
    padding: 2rem;
    font-size: xx-large;
    color: rgb(103, 212, 189);
    text-decoration: underline;
    font-weight: bold;

}

.project:hover {
    background-color: rgba(199, 199, 199, 0.103);
}

a {
    text-decoration: none;
}

.description {
    padding-left: 2rem;
    padding-right: 2rem;
    color: white;
}

.title {
    padding: 2rem;
    font-size: xx-large;
    color: rgb(103, 212, 189);
    padding-bottom: 1rem;
    padding-top: 1rem;
}

.otd-title {
    padding: 3rem;
    padding-top: 5rem;
    font-size: xx-large;
    color: rgb(103, 212, 189);
    padding-bottom: 1rem;
    padding-top: 1rem;
}

.company {
    padding-left: 2rem;
    font-size: x-large;
    color: rgba(255, 255, 255, 0.432);

}

.stack {
    padding: 2rem;
    text-align: center;
    font-family: "Lucida Console";
    color: rgba(255, 255, 255, 0.75);
    padding-bottom: 1rem;
    padding-top: 1rem;
}

.more-info {
    padding: 2rem;
    text-align: center;
    color: rgba(255, 255, 255, 0.75);
    padding-bottom: 1rem;
    padding-top: 1rem;
    font-weight: bold;
}

.welcome-text {
    width: 50%;
    position: sticky;
    top: 8rem;
    padding-left: 10rem;
}

.welcome-text>.name {
    font-size: 3rem;
    color: white
}

.welcome-text>.job {
    font-size: xx-large;
    color: rgba(255, 255, 255, 0.466);
}

.welcome-text>.description {
    color: rgba(255, 255, 255, 0.466);
}

.link {
    color: white;
    text-decoration: none;

}

.selected{background-color: lightgray;}


@media only screen and (max-width: 768px) {
    /* For mobile phones: */
    .grid-container{
        display: grid;
        grid-template-columns: 1fr;
        width: 100%;
    }

    .welcome-text{
        width: 100%;
        position:static;
        top: none;
        padding: none;
        text-align: center;
    }
  }

